--- a/JAVA-WEB/jw-01-browser/ormJpa/src/main/resources/application.properties
+++ b/JAVA-WEB/jw-01-browser/ormJpa/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/springboot
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring-r
 spring.datasource.username=root
 spring.datasource.password=29302930
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.open-in-view=false
+#spring.jpa.open-in-view=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
